Fix for bug #67256: ReplaceAll with WrapAround should stop replacing before passing initial caret position. Fixed the off by +1 error GetCurrentBlockIndex() so it now returns the correct block index. Modified DoFind() to compare mCurrentSelOffset and mStartSelOffset to check if we are passing the initial caret position. We now only call GetCurrentBlockIndex() if we are wrapping. r=akkana@netscape.com sr=sfraser@netscape.com